--- a/Code/CalcSedFlux_October2016.ipynb
+++ b/Code/CalcSedFlux_October2016.ipynb
@@ -2052,6 +2052,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# also checking runoff totals "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OceanBasin\n",
+       "ArcticOcean        28.421560\n",
+       "BaffinBay         126.419892\n",
+       "DavisSt_LabSea    172.611282\n",
+       "DenmarkStrait      60.036623\n",
+       "GreenlandSea       48.001370\n",
+       "ScoresbySound      10.403863\n",
+       "Name: runoff_m3y, dtype: float64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sedTable.groupby(by=['OceanBasin'])['runoff_m3y'].sum()/1.0E+9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "444"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "28+126+172+60+48+10"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
