--- a/Code/CalcSedFlux_October2016.ipynb
+++ b/Code/CalcSedFlux_October2016.ipynb
@@ -7,9 +7,9 @@
     "# Calculating Sediment Flux Code\n",
     "\n",
     "This code is how I calculated sediment flux for the tables in the paper.\n",
-    "The data that it is taken from is the shalefile All_catchments_icev03_m3_ep_July16_CLEAN.shp\n",
+    "The data that it is taken from is in the shapefile All_catchments_icev03_m3_ep_July16_CLEAN.shp\n",
     "\n",
-    "Steps all the way down to calculating the lowering rate were aledy done to the shapefile (in a previous ipython notebook, CalcSedFlux_May2016.ipyb) they code is shown here/repeated so that you can follow my train of thought\n",
+    "Steps all the way down to calculating the lowering rate were already done to the shapefile (in a previous ipython notebook, CalcSedFlux_May2016.ipyb) the code is shown here/repeated so that you can follow my train of thought\n",
     "\n",
     "Also, the oceanBasin Column was added in October 2016 for clarity "
    ]
